...
                        android:src="@drawable/logworkout" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weight_log_home"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:onClick="openWeighLogging"
                app:cardBackgroundColor="#0091EA"
...
